--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   email : m.e.w.oleary@gmail.com
   github : mewo2
   twitter : mewo2
-  feedburner : feedname
+  feedburner : coldhardfacts
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
